@@ -49,6 +49,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.Consumer;
 
 import static io.questdb.client.cutlass.qwp.protocol.QwpConstants.*;
 import static io.questdb.client.test.tools.TestUtils.assertMemoryLeak;
@@ -217,7 +218,7 @@ public class QwpUdpSenderTest {
             }
 
             assertRowsEqual(
-                    Arrays.asList(decodedRow(
+                    List.of(decodedRow(
                             "arrays",
                             "la", longArrayValue(shape(2), 9, 10),
                             "da", doubleArrayValue(shape(2), 9.5, 10.5)
@@ -231,7 +232,7 @@ public class QwpUdpSenderTest {
     public void testAtMicrosOversizeFailureRollsBackWithoutLeakingTimestampState() throws Exception {
         assertMemoryLeak(() -> {
             String large = repeat('x', 5000);
-            List<ScenarioRow> oversizedRow = Arrays.asList(
+            List<ScenarioRow> oversizedRow = List.of(
                     row("t", sender -> sender.table("t")
                                     .longColumn("a", 2)
                                     .stringColumn("s", large)
@@ -271,7 +272,7 @@ public class QwpUdpSenderTest {
     public void testAtNanosOversizeFailureRollsBackWithoutLeakingTimestampState() throws Exception {
         assertMemoryLeak(() -> {
             String large = repeat('x', 5000);
-            List<ScenarioRow> oversizedRow = Arrays.asList(
+            List<ScenarioRow> oversizedRow = List.of(
                     row("tn", sender -> sender.table("tn")
                                     .longColumn("a", 2)
                                     .stringColumn("s", large)
@@ -311,7 +312,7 @@ public class QwpUdpSenderTest {
     public void testAtNowOversizeFailureRollsBackWithoutExplicitCancel() throws Exception {
         assertMemoryLeak(() -> {
             String large = repeat('x', 5000);
-            List<ScenarioRow> oversizedRow = Arrays.asList(
+            List<ScenarioRow> oversizedRow = List.of(
                     row("t", sender -> sender.table("t")
                                     .longColumn("a", 2)
                                     .stringColumn("s", large)
@@ -806,7 +807,7 @@ public class QwpUdpSenderTest {
             }
 
             Assert.assertEquals(1, nf.sendCount);
-            assertRowsEqual(Arrays.asList(decodedRow("t", "x", 1L)), decodeRows(nf.packets));
+            assertRowsEqual(List.of(decodedRow("t", "x", 1L)), decodeRows(nf.packets));
         });
     }
 
@@ -849,7 +850,7 @@ public class QwpUdpSenderTest {
     @Test
     public void testFirstRowAllowsMultipleNewColumnsAndEncodesRow() throws Exception {
         assertMemoryLeak(() -> {
-            List<ScenarioRow> rows = Arrays.asList(
+            List<ScenarioRow> rows = List.of(
                     row("t", sender -> sender.table("t")
                                     .longColumn("a", 1)
                                     .doubleColumn("b", 2.0)
@@ -904,7 +905,7 @@ public class QwpUdpSenderTest {
             }
 
             Assert.assertEquals(1, nf.sendCount);
-            assertRowsEqual(Arrays.asList(decodedRow("t", "x", 1L)), decodeRows(nf.packets));
+            assertRowsEqual(List.of(decodedRow("t", "x", 1L)), decodeRows(nf.packets));
         });
     }
 
@@ -924,7 +925,7 @@ public class QwpUdpSenderTest {
             }
 
             Assert.assertEquals(1, nf.sendCount);
-            assertRowsEqual(Arrays.asList(decodedRow("ok", "x", 1L)), decodeRows(nf.packets));
+            assertRowsEqual(List.of(decodedRow("ok", "x", 1L)), decodeRows(nf.packets));
         });
     }
 
@@ -943,7 +944,7 @@ public class QwpUdpSenderTest {
             }
 
             Assert.assertEquals(1, nf.sendCount);
-            assertRowsEqual(Arrays.asList(decodedRow("arrays", "x", 1L)), decodeRows(nf.packets));
+            assertRowsEqual(List.of(decodedRow("arrays", "x", 1L)), decodeRows(nf.packets));
         });
     }
 
@@ -965,7 +966,7 @@ public class QwpUdpSenderTest {
             }
 
             assertRowsEqual(
-                    Arrays.asList(decodedRow(
+                    List.of(decodedRow(
                             "arrays",
                             "la", longArrayValue(shape(2, 2), 1, 2, 3, 4)
                     )),
@@ -1089,7 +1090,7 @@ public class QwpUdpSenderTest {
                 doubleValues[i] = i + 0.25;
             }
 
-            List<ScenarioRow> rows = Arrays.asList(
+            List<ScenarioRow> rows = List.of(
                     row("arrays", sender -> sender.table("arrays")
                                     .longColumn("x", 1)
                                     .longArray("la", longValues)
@@ -1120,7 +1121,7 @@ public class QwpUdpSenderTest {
     public void testOversizedRowAfterMidRowSchemaChangeCancelDoesNotLeakSchema() throws Exception {
         assertMemoryLeak(() -> {
             String large = repeat('x', 5000);
-            List<ScenarioRow> oversizedRow = Arrays.asList(
+            List<ScenarioRow> oversizedRow = List.of(
                     row("t", sender -> sender.table("t")
                                     .longColumn("a", 2)
                                     .stringColumn("s", large)
@@ -1161,7 +1162,7 @@ public class QwpUdpSenderTest {
         assertMemoryLeak(() -> {
             String small = repeat('s', 32);
             String large = repeat('x', 5000);
-            List<ScenarioRow> largeRow = Arrays.asList(
+            List<ScenarioRow> largeRow = List.of(
                     row("t", sender -> sender.table("t")
                                     .longColumn("x", 2)
                                     .stringColumn("s", large)
@@ -1188,7 +1189,7 @@ public class QwpUdpSenderTest {
             Assert.assertEquals(1, nf.sendCount);
             assertPacketsWithinLimit(new RunResult(nf.packets, nf.lengths, nf.sendCount), maxDatagramSize);
             assertRowsEqual(
-                    Arrays.asList(decodedRow("t", "x", 1L, "s", small)),
+                    List.of(decodedRow("t", "x", 1L, "s", small)),
                     decodeRows(nf.packets)
             );
         });
@@ -1198,7 +1199,7 @@ public class QwpUdpSenderTest {
     public void testOversizedSingleRowRejectedBeforeReplayUsesActualEncodedSize() throws Exception {
         assertMemoryLeak(() -> {
             String large = repeat('x', 5000);
-            List<ScenarioRow> rows = Arrays.asList(
+            List<ScenarioRow> rows = List.of(
                     row("t", sender -> sender.table("t")
                                     .longColumn("x", 1)
                                     .stringColumn("s", large)
@@ -1465,7 +1466,7 @@ public class QwpUdpSenderTest {
             Assert.assertEquals(1, nf.scatterSendCount);
             Assert.assertEquals(0, nf.rawSendCount);
             Assert.assertTrue("expected multiple segments for header/schema/data", nf.segmentCounts.get(0) > 1);
-            assertRowsEqual(Arrays.asList(decodedRow("t", "x", 42L)), decodeRows(nf.packets));
+            assertRowsEqual(List.of(decodedRow("t", "x", 42L)), decodeRows(nf.packets));
         });
     }
 
@@ -1989,7 +1990,7 @@ public class QwpUdpSenderTest {
         return new String(chars);
     }
 
-    private static ScenarioRow row(String table, ThrowingConsumer<QwpUdpSender> writer, Object... kvs) {
+    private static ScenarioRow row(String table, Consumer<QwpUdpSender> writer, Object... kvs) {
         return new ScenarioRow(decodedRow(table, kvs), writer);
     }
 
@@ -2015,11 +2016,6 @@ public class QwpUdpSenderTest {
 
     private static int[] shape(int... dims) {
         return dims;
-    }
-
-    @FunctionalInterface
-    private interface ThrowingConsumer<T> {
-        void accept(T value) throws Exception;
     }
 
     @FunctionalInterface
@@ -2120,16 +2116,6 @@ public class QwpUdpSenderTest {
 
         private DatagramDecoder(byte[] packet) {
             this.reader = new PacketReader(packet);
-        }
-
-        private static int countNulls(boolean[] nulls) {
-            int count = 0;
-            for (boolean value : nulls) {
-                if (value) {
-                    count++;
-                }
-            }
-            return count;
         }
 
         private List<DecodedRow> decode() {
@@ -2594,9 +2580,9 @@ public class QwpUdpSenderTest {
 
     private static final class ScenarioRow {
         private final DecodedRow expected;
-        private final ThrowingConsumer<QwpUdpSender> writer;
+        private final Consumer<QwpUdpSender> writer;
 
-        private ScenarioRow(DecodedRow expected, ThrowingConsumer<QwpUdpSender> writer) {
+        private ScenarioRow(DecodedRow expected, Consumer<QwpUdpSender> writer) {
             this.expected = expected;
             this.writer = writer;
         }
